[tool.poetry]
name = "cirrhosis-prediction"
version = "0.1.0"
description = "Homework 1: Cirrhosis Patient Survival Prediction"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "model.py"}]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
catboost = ">=1.2.0"
optuna = ">=3.0.0"
scikit-learn = ">=1.2.0"
clearml = ">=1.10.0"
fire = ">=0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"